@@ -56,6 +56,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   tail --follow consistently outputs all data for a truncated file.
   [bug introduced in the beginning]
 
+  tail --follow=name correctly outputs headers for multiple files
+  when those files are being created or renamed.
+  [bug introduced in coreutils-7.5]
+
 ** New features
 
   chroot accepts the new --skip-chdir option to not change the working directory
